fix issue where line breaks in markdown code blocks are put on the same line

--- a/src/styles/post.css
+++ b/src/styles/post.css
@@ -52,7 +52,7 @@ pre {
     line-height: 1.5rem;
     border-radius: 1.5rem;
     border: 2px solid rgb(207, 178, 236);
-    white-space: normal;
+    white-space: pre-wrap;
     overflow-wrap: break-word;
     box-shadow: #222;
     --tw-shadow: 0 4px 6px -1px rgb(0 0 0 / 0.1), 0 2px 4px -2px rgb(0 0 0 / 0.1);
